[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/titlescreen.png" type="Texture" id=1]
[ext_resource path="res://UI/Main Menu UI.gd" type="Script" id=2]
[ext_resource path="res://assets/game over fade.png" type="Texture" id=3]
[ext_resource path="res://assets/themes/GameUI.tres" type="Theme" id=4]

[node name="Main Menu UI" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="TextureRect2" type="TextureRect" parent="."]
visible = false
margin_right = 1024.0
margin_bottom = 768.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -256.0
margin_right = -64.0
margin_bottom = -136.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 192.0
margin_bottom = 632.0
custom_constants/separation = 64
alignment = 2

[node name="butt_New Game" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 528.0
margin_right = 192.0
margin_bottom = 548.0
text = "New Game"

[node name="butt_Options" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 612.0
margin_right = 192.0
margin_bottom = 632.0
text = "Options"

[node name="PanelContainer" type="PanelContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 14.0
margin_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 343.0
margin_bottom = 240.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 328.0
margin_bottom = 225.0
custom_constants/separation = 48

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 320.0
margin_bottom = 37.0
theme = ExtResource( 4 )
text = "Options"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 85.0
margin_right = 320.0
margin_bottom = 85.0
custom_constants/margin_right = 320

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 133.0
margin_right = 320.0
margin_bottom = 149.0

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 79.0
margin_bottom = 16.0

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 79.0
margin_bottom = 14.0
text = "Game Audio"

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 83.0
margin_right = 320.0
margin_bottom = 16.0
size_flags_horizontal = 3

[node name="slide Audio" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 237.0
margin_bottom = 16.0
size_flags_horizontal = 3
value = 100.0

[node name="butt Close Options" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 197.0
margin_right = 320.0
margin_bottom = 217.0
text = "Close Options"
[connection signal="pressed" from="MarginContainer/VBoxContainer/butt_New Game" to="." method="_on_butt_New_Game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/butt_Options" to="." method="_on_butt_Options_pressed"]
[connection signal="value_changed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/slide Audio" to="." method="_on_slide_Audio_value_changed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/butt Close Options" to="." method="_on_butt_Close_Options_pressed"]
